[package]
name = "evolutionary"
version = "0.1.0"
edition = "2021"

[lib]
name = "evolutionary"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
ndarray = "0.16.1"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"

[dev-dependencies]
flamegraph = "0.6.9"
